--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div id="page1">
         <a id="about" class="smooth"></a>
-          <img src="/images/spitting-llama.jpg" alt="Mountain View" style="width:304px;height:228px;">
+          <img src="./images/spitting-llama.jpg" alt="Mountain View" style="width:304px;height:228px;">
 
       </div>
        
