--- a/index.html
+++ b/index.html
@@ -32,8 +32,17 @@
 
       <div id="page1">
         <a id="about" class="smooth"></a>
-          <img src="./images/spitting-llama.jpg" alt="Mountain View" style="width:304px;height:228px;">
+          <p>Although llamas can carry 50 pounds for 20 miles in one day, a llama will refuse to move if you put too much weight on it.</p>
+          <a href="http://www.hdwallpapers.org/funny-spitting-llama-wallpapers.html">
+          <img src="./images/spitting-llama.jpg" alt="spitting-llama" style="width:1280px;height:800px;">
 
+          <p>Llamas have three stomachs!</p>
+          <a href="http://imgur.com/gallery/1ew3wPw">
+          <img src="./images/llama-eating-popcorn.jpg" alt="llama-eating-popcorn" style="width:1280px;height:720px;">
+
+          <p>Llamas are able to guard sheep, goats, cows.</p>
+          <a href="https://wall.alphacoders.com/big.php?i=650214">
+          <img src="./images/guard-llama.jpg" alt="guard-llama" style="width:1280px;height:960px;">
       </div>
        
       <div id="page2">
