--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    
 
     <section class="main-content">
-      <div id="nav">
+      <div id="float_nav">
           <a href="#about_llama" class="btn">About Llama</a>
           <a href="#portfolio" class="btn">Portfolio</a>
           <a href="#contact" class="btn">Contact</a>
