--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </section>
     
     <div id="float_nav">
-          <a href="#about_llama" class="btn">About Llama</a>
-          <a href="#my_portfolio" class="btn">My Portfolio</a>
-          <a href="#this_site" class="btn">This Site</a>
+          <a href="#about_llama" class="smooth btn">About Llama</a>
+          <a href="#my_portfolio" class="smooth btn">My Portfolio</a>
+          <a href="#this_site" class="smooth btn">This Site</a>
     </div>
 
     <section class="main-content">
@@ -57,8 +57,8 @@
       <div id="page3">
         <a id="this_site" class="smooth"></a>
           <h3>True Facts about This Site</h3>
-          <p>I only used JQuery because I feel that is all I need here.\n
-          I hope you enjoyed this piece!<\p>
+          <p>I only used JQuery because I feel that is all I need here./n
+          I hope you enjoyed this piece!</p>
           <i>“Simplicity is not a simple thing.” —— Charlie Chaplin</i>
       </div>
 
