--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section class="main-content">
       <div id="page1">
-        <a id="about" class="smooth"></a>
+        <a id="about_llama" class="smooth"></a>
           <h3>Fun Facts about Llama</h3>
           <h4>Although llamas can carry 50 pounds for 20 miles in one day, a llama will refuse to move if you put too much weight on it.</h4>
           <a href="http://www.hdwallpapers.org/funny-spitting-llama-wallpapers.html">Source</a>
