--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
       <div id="page1">
         <a id="about_llama" class="smooth"></a>
           <h2>Fun Facts about Llama</h2>
-          <h4>Although llamas can carry 50 pounds for 20 miles in one day, a llama will refuse to move if you put too much weight on it.</h4>
+          <p>Although llamas can carry 50 pounds for 20 miles in one day, a llama will refuse to move if you put too much weight on it.</p>
           <a href="http://www.hdwallpapers.org/funny-spitting-llama-wallpapers.html">Source</a>
           <img src="./images/spitting-llama.jpg" alt="spitting-llama" style="width:1280px;">
 
-          <h4>Llamas have three stomachs!</h4>
+          <p>Llamas have three stomachs!</p>
           <a href="http://imgur.com/gallery/1ew3wPw">Source</a>
           <img src="./images/llama-eating-popcorn.jpg" alt="llama-eating-popcorn" style="width:1280px;">
 
-          <h4>Llamas are able to guard sheep, goats, cows.</h4>
+          <p>Llamas are able to guard sheep, goats, cows.</p>
           <a href="https://wall.alphacoders.com/big.php?i=650214">Source</a>
           <img src="./images/guard-llama.jpg" alt="guard-llama" style="width:1280px;">
       
       <div id="page2">
         <a id="my_portfolio" class="smooth"></a>
           <h2>Fun Facts about Me</h2>
-          <h4>Hello! My name is Suyang Chen. I am a Junior Computer Science major and an Art and Design minor. I want to make good designs because I know how important they are.</h4>
-          <h4>Come now and take a look at my work!</h4>
+          <p>Hello! My name is Suyang Chen. I am a Junior Computer Science major and an Art and Design minor. I want to make good designs because I know how important they are.</p>
+          <p>Come now and take a look at my work!</h4>
           
           <img src="" alt="" style="width:1280px;">
           <img src="" alt="" style="width:1280px;">
