--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
           
           <p>Llamas will refuse to move with too much wieght on.</p>
           <img src="./images/spitting-llama.jpg" alt="spitting-llama" style="width:1280px;">
-          <div align="right" style="font-size:7pt">
+          <div align="right">
           <a href="http://www.hdwallpapers.org/funny-spitting-llama-wallpapers.html">Source</a>
           </div>
 
           <p>Llamas have three stomachs!</p>
           <img src="./images/llama-eating-popcorn.jpg" alt="llama-eating-popcorn" style="width:1280px;">
-          <div align="right" style="font-size:7pt">
+          <div align="right">
           <a href="http://imgur.com/gallery/1ew3wPw">Source</a>
           </div>
 
           <p>Llamas are able to guard sheep, goats, cows.</p>
           <img src="./images/guard-llama.jpg" alt="guard-llama" style="width:1280px;">
-          <div align="right" style="font-size:7pt">
+          <div align="right">
           <a href="https://wall.alphacoders.com/big.php?i=650214">Source</a>
           </div>
   
