--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
           <p>Come now and take a look at my work!</h4>
           
           <div>
-            <img src="homepage.jpg" alt="homepage_megazine" style="width:1280px;">
+            <img src="./images/homepage.jpg" alt="homepage_megazine" style="width:1280px;">
           </div>
           <div class="container">
-            <img src="tshirt-final.pdf" alt="tshirt1" style="width:640px;">
+            <img src="./images/tshirt-final.pdf" alt="tshirt1" style="width:640px;">
           </div>
           <div class="container">
-            <img src="flower.jpg" alt="tshirt2" style="width:640px;">
+            <img src="./images/flower.jpg" alt="tshirt2" style="width:640px;">
           </div>
           <div class="container">
-            <img src="mars.jpg" alt="tshirt1" style="width:640px;">
+            <img src="./images/mars.jpg" alt="tshirt1" style="width:640px;">
           </div>
           <div class="container">
-            <img src="candy_final.jpg" alt="tshirt2" style="width:640px;">
+            <img src="./images/candy_final.jpg" alt="tshirt2" style="width:640px;">
           </div>
           
 
