--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img src="./images/homepage.jpg" alt="homepage_megazine" style="width:1280px;">
           </div>
           <div class="container">
-            <img src="./images/tshirt-final.pdf" alt="tshirt1" style="width:50%;">
+            <img src="./images/tshirt-final.jpg" alt="tshirt1" style="width:50%;">
           </div>
           <div class="container">
             <img src="./images/flower.jpg" alt="tshirt2" style="width:50%;">
