--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
           
           <div class="container">
           <div>  
-            <img src="./images/tshirt-final.jpg" alt="tshirt1>
+            <img src="./images/tshirt-final.jpg" alt="tshirt1">
           </div>
           <div>
-            <img src="./images/flower.jpg" alt="tshirt2>
+            <img src="./images/flower.jpg" alt="tshirt2">
           </div>
           </div>
           <div class="container">
           <div>
-            <img src="./images/mars.jpg" alt="tshirt1>
+            <img src="./images/mars.jpg" alt="tshirt1">
           </div>
           <div>
-            <img src="./images/candy_final.jpg" alt="tshirt2>
+            <img src="./images/candy_final.jpg" alt="tshirt2">
           </div>
           </div>
           
