--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
           </div>
           
           <div class="container">
-          <div>  
+          <div style="width: 50%">  
             <img src="./images/tshirt-final.jpg" alt="tshirt1">
           </div>
-          <div>
+          <div style="width: 50%">
             <img src="./images/flower.jpg" alt="tshirt2">
           </div>
           </div>
           <div class="container">
-          <div>
+          <div style="width: 50%">
             <img src="./images/mars.jpg" alt="tshirt1">
           </div>
-          <div>
+          <div style="width: 50%">
             <img src="./images/candy_final.jpg" alt="tshirt2">
           </div>
           </div>
