--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </div>
           
           <div class="container">
-          <div style="width: 50%">  
+          <div style="width: 50%;float: left;">  
             <img src="./images/tshirt-final.jpg" alt="tshirt1">
           </div>
           <div style="width: 50%">
@@ -70,7 +70,7 @@
           </div>
           </div>
           <div class="container">
-          <div style="width: 50%">
+          <div style="width: 50%;float: left;">
             <img src="./images/mars.jpg" alt="tshirt1">
           </div>
           <div style="width: 50%">
