--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
             <img src="./images/homepage.jpg" alt="homepage_megazine" style="width:100%;">
           </div>
           
-          <div class="container">
-          <div style="width: 50%;float: left;">  
-            <img src="./images/tshirt-final.jpg" alt="tshirt1">
+          <div class="container" style="width: 100%;">
+            <div style="width: 50%;float: left;">  
+              <img src="./images/tshirt-final.jpg" alt="tshirt1">
+            </div>
+            <div style="width: 50%;">
+              <img src="./images/flower.jpg" alt="tshirt2">
+            </div>
           </div>
-          <div style="width: 50%">
-            <img src="./images/flower.jpg" alt="tshirt2">
-          </div>
-          </div>
-          <div class="container">
-          <div style="width: 50%;float: left;">
-            <img src="./images/mars.jpg" alt="tshirt1">
-          </div>
-          <div style="width: 50%">
-            <img src="./images/candy_final.jpg" alt="tshirt2">
-          </div>
+          <div class="container" style="width: 100%;">
+            <div style="width: 50%;float: left;">
+              <img src="./images/mars.jpg" alt="tshirt1">
+            </div>
+            <div style="width: 50%;">
+              <img src="./images/candy_final.jpg" alt="tshirt2">
+            </div>
           </div>
           
 
