--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
           
           <div class="container" style="width: 100%;"> 
               <img src="./images/tshirt-final.jpg" alt="tshirt1" style="width: 50%;float: left;">
-              <img src="./images/flower.jpg" alt="tshirt2">
+              <img src="./images/flower.jpg" alt="tshirt2" style="width: 50%;">
           </div>
           <div class="container" style="width: 100%;">
               <img src="./images/mars.jpg" alt="tshirt1" style="width: 50%;float: left;">
-              <img src="./images/candy_final.jpg" alt="tshirt2">
+              <img src="./images/candy_final.jpg" alt="tshirt2" style="width: 50%;">
             </div>
           </div>
           
